fixed Google audits: contrast

--- a/sass/blocks/form-button.scss
+++ b/sass/blocks/form-button.scss
@@ -11,7 +11,7 @@
   text-align: center;
   color: #ffffff;
 
-  background-color: #2aab6d;
+  background-color: #218756;
   border: none;
   cursor: pointer;
 
