--- a/sass/blocks/os.scss
+++ b/sass/blocks/os.scss
@@ -15,7 +15,7 @@
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
-  color: $brand-color;
+  color: darken($brand-color, 1);
 }
 
 .os__list {
