--- a/sass/blocks/post.scss
+++ b/sass/blocks/post.scss
@@ -114,7 +114,7 @@
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
-  color: $brand-color;
+  color: darken($brand-color, 1);
 }
 
 @media (min-width: $tablet-width) {
